--- a/jupyter-note/practice_01_openai_demo_cartPole.ipynb
+++ b/jupyter-note/practice_01_openai_demo_cartPole.ipynb
@@ -21,21 +21,43 @@
     "- 无需智体先验知识；\n",
     "- 兼容常见的数值运算库如 TensorFlow、Theano 等\n",
     "\n",
-    "## Gym 的一个最小例子 `CartPole-v0`"
+    "## Gym 的一个最小例子 `CartPole-v0`\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 车杆模型\n",
+    "\n",
+    "> 出自 Barto, Sutton, and Anderson 的 `cart-pole problem`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARN: gym.spaces.Box autodetected dtype as <class 'numpy.float32'>. Please provide explicit dtype.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import gym\n",
     "env = gym.make('CartPole-v0')\n",
-    "env.reset()\n",
+    "observation = env.reset()\n",
     "for _ in range(1000):\n",
     "    env.render()\n",
-    "    env.step(env.action_space.sample()) # take a random action"
+    "    action = env.action_space.sample()\n",
+    "    observation, reward, done, info = env.step(action) # take a random action\n",
+    "    if done: \n",
+    "        env.render()\n",
+    "        break"
    ]
   },
   {
@@ -164,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
