--- a/jupyter-note/0-outline.ipynb
+++ b/jupyter-note/0-outline.ipynb
@@ -31,23 +31,27 @@
     "\n",
     "强化学习也是机器学习中的一个重要分支。强化学习和监督学习的不同在 于，强化学习问题不需要给出“正确”策略作为监督信息，只需要给出策略的(延迟)回报，并通过调整策略来取得最大化的期望回报。\n",
     "\n",
-    "![](https://ws1.sinaimg.cn/large/c3a916a7gy1fui6ulth5yj20qb08r0tc.jpg)\n",
-    "\n",
+    "![](https://ws1.sinaimg.cn/large/c3a916a7gy1fuipsc9dnrj20iy05g74p.jpg)\n",
     "\n",
     "### 2.1 术语\n",
     "\n",
-    "- 智体 (Agent)\n",
-    "- 环境 (Environment)\n",
-    "- 状态 (State)\n",
-    "- 动作 (Action)\n",
-    "- 策略 (Policy)\n",
-    "- 奖励 (Reward)\n",
-    "- 状态转移概率 \n",
+    "- 智体 (Agent): 执行动作对环境产生影响，感知外接环境状态(state)和反馈奖励(reward)，并进行学习和决策。\n",
+    "- 环境 (Environment)： 出了智体以外的所有事物，智体动作可以影响环境状态，反馈智体奖励。\n",
+    "- 状态 $s$ (State)：是环境的描述。\n",
+    "- 动作 $a$ (Action)：对智体行为的描述。\n",
+    "- 策略 $\\pi$ (Policy)：智体根据环境的状态来决定下一步动作$a$的函数。\n",
+    "- 奖励 $r$ (Reward)：当智体完成动作之后，环境会响应的给智体一个奖励(标量值)$r$。\n",
+    "- 状态转移概率 ：智体从前一个状态完成动作后，环境在下个时间点转变成状态s的概率\n",
     "\n",
     "### 2.2 马尔科夫过决策过程\n",
     "\n",
-    "- 图片\n",
-    "- 解释"
+    "#### 原理图\n",
+    "\n",
+    "![](https://ws1.sinaimg.cn/large/c3a916a7gy1fuiprnxti8j20gr04ot91.jpg)\n",
+    "\n",
+    "#### 解释\n",
+    "\n",
+    "智能体与环境的交互的过程可以看作是一个**马尔可夫决策过程**。"
    ]
   },
   {
@@ -233,14 +237,6 @@
     "\n",
     "print(env.observation_space.high)\n",
     "print(env.observation_space.low)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n"
    ]
   },
   {
