--- a/jupyter-note/practice_01_openai_demo_cartPole.ipynb
+++ b/jupyter-note/practice_01_openai_demo_cartPole.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -49,6 +49,7 @@
    ],
    "source": [
     "import gym\n",
+    "%matplotlib inline\n",
     "env = gym.make('CartPole-v0')\n",
     "observation = env.reset()\n",
     "for _ in range(1000):\n",
