--- a/jupyter-note/0-outline.ipynb
+++ b/jupyter-note/0-outline.ipynb
@@ -197,13 +197,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,19 +286,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 求解 Cartpole 杆车模型"
+    "### 求解 Cartpole 杆车模型\n",
+    "\n",
+    "#### 算法步骤\n",
+    "\n",
+    "- 定义策略 Policy\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 求解"
+    "#### 代码求解"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
